styles.css
body,
h1,
h2,
h3,
h4,
ul {
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

button {
  outline: none;
  border: 0;
}

nav {
  width: 100%;
  height: 72px;
  background: #3e3c3c;
  display: flex;
  align-items: center;
  padding: 26px 0;
  box-sizing: border-box;
  justify-content: space-between;
}

.navbar-logo {
  font-size: 18px;
  line-height: 24px;
  font-family: Roboto, sans-serif;
  color: #fff;
}

.navbar-menu {
  display: none;
}

.navbar-link {
  list-style: none;
  line-height: 20px;
  font-size: 15px;
  font-weight: 600;
  margin: 0 12px;
}

.navbar-link a:hover {
  opacity: 0.8;
  transition: all 0.3s ease-in-out;
}

.navbar-menu-button {
  display: block;
}

header {
  background-size: 256px;
  height: 660px;
  width: 100%;
  background-color: #1c1a19;
  display: flex;
  background-repeat: no-repeat;
  background-position: bottom right -110px;
  background-image: url("./assets/png/header-illustration.png");
}

.header-content {
  width: 566px;
  margin: 122px 0;
  position: relative;
}

.header-title {
  font-weight: normal;
  position: static;
  font-size: 72px;
  line-height: 81px;
  width: 400px;
  margin-left: -200px;
  animation-name: title-animation;
  animation-duration: 3s;
  animation-fill-mode: forwards;
}

@keyframes title-animation {
  100% {
    margin-left: 0;
  }
}

.header-subtitle {
  font-size: 24px;
  line-height: 32px;
  margin-top: 12px;
  width: 100%;
}

.header-text {
  font-size: 16px;
  line-height: 24px;
  font-family: Poppins, sans-serif;
  font-weight: 400;
  width: 100%;
}

.social-media-links {
  position: static;
  margin-top: 20px;
  top: 264px;
  left: 40px;
  display: flex;
  flex-direction: row;
  list-style: none;
}

.header-image {
  width: 100%;
  height: 100%;
}

.works {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
}

.works-title-section {
  text-align: center;
  margin-top: 120px;
  margin-bottom: 49px;
}

.works-title {
  font-size: 40px;
  line-height: 52px;
  height: 83px;
}

.f-project-img {
  width: 100%;
  height: 237px;
}

.project-title {
  font-size: 32px;
  line-height: 44px;
  font-weight: normal;
}

.project-description {
  font-size: 16px;
  line-height: 24px;
}

.project {
  display: flex;
  align-items: flex-end;
  width: 100%;
  height: calc(386px - 50px);
  background: #aaa;
  background-image: url("./assets/png/art\ printing.png");
  background-position: top left;
  background-size: cover;
  padding: 16px;
}

.about {
  margin-top: 120px;
  background: #1c1a19;
  padding-bottom: 80px;
}

.about-intro {
  width: 100%;
  padding-top: 120px;
  padding-bottom: 209px;
  background-image: url("assets/png/illustration-about-me.png");
  background-repeat: no-repeat;
  background-size: 493px 258px;
  background-position: bottom right -305px;
}

.about-title {
  height: 79px;
  font-size: 72px;
  line-height: 88px;
  letter-spacing: 0.33px;
}

.about-separater {
  border: 1px solid #fff;
  margin-bottom: 136px;
}

.technologies {
  list-style: none;
  width: 100%;
  text-align: center;
}

.tech-title {
  height: 41.46px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  margin-top: 2px;
  margin-bottom: 2px;
}

.tech-title > h5 {
  font-size: 32px;
  line-height: 44px;
}

.tech {
  font-size: 22px;
  line-height: 43px;
  list-style: none;
  text-align: center;
  height: 48px;
}

.tags {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  justify-content: flex-start;
}

.tag {
  border: 1px solid #8993a4;
  padding: 10px;
  font-size: 15px;
  font-family: Inter, sans-serif;
  line-height: 20px;
  list-style: none;
}

.dark-tag {
  background: rgba(255, 255, 255, 0.24);
}

.button {
  padding: 12px;
  font-family: Inter, sans-serif;
  font-weight: bold;
  font-size: 17px;
  line-height: 24px;
  background: #ff6b00;
  color: #fff;
  border: 1px solid #ff6b00;
}

.button:hover {
  transition: all 0.2s ease-in-out;
  background: #fff5e1;
  border: 1px solid #f55800;
  color: #f55800;
}

.button:active {
  background: #e05304;
  color: #f4f1f0;
  border: 1px solid #e05304;
}

.button-disabled {
  background: #f4f1f0;
  color: #5b5957;
  border: 1px solid #f4f1f0;
}

.button-disabled:hover {
  background: #f4f1f0;
  color: #5b5957;
  border: 1px solid #f4f1f0;
  cursor: not-allowed;
}

.contact-form-section {
  padding: 120px 24px 124px 24px;
}

.contact-form-title-section {
  width: 100%;
  display: flex;
  justify-content: center;
}

.contact-form-title {
  width: 327px;
  height: 216px;
  font-size: 32px;
  font-weight: bold;
  line-height: 44px;
  text-align: center;
  color: #172b4d;
}

.contact-form {
  height: 330px;
  margin-top: 58px;
  text-align: center;
}

.input-field {
  height: 48px;
  width: 100%;
  padding: 15px 16px;
  border: 0;
  border-bottom: 1px solid #dbd8d7;
}

.input-textarea {
  height: 114px;
  background-color: #fbf8f7;
}

.footer-social-media-links {
  display: flex;
  justify-content: center;
  text-align: center;
}

.footer-social-media-links li {
  list-style: none;
  width: 40px;
  height: 40px;
  margin-top: 15px;
  margin-bottom: 13px;
}

.footer-line-section {
  display: flex;
  justify-content: center;
  margin-bottom: 8px;
}

.container {
  padding-left: 24px;
  padding-right: 24px;
}

@media screen and (min-width: 1100px) {
  .container {
    padding: 0 154px;
  }

  .navbar-menu {
    display: flex;
  }

  .navbar-menu-button {
    display: none;
  }

  .navbar-logo {
    font-size: 20px;
    line-height: 20px;
    font-family: Roboto, sans-serif;
  }

  .header {
    background-position: top right;
    background-size: auto;
    height: 870px;
  }

  .header-title {
    font-size: 72px;
    line-height: 81px;
    width: 400px;
  }

  .header-subtitle {
    font-size: 32px;
    line-height: 44px;
    margin-top: 0;
    width: 566px;
  }

  .header-text {
    font-size: 1.3rem;
    line-height: 32px;
    width: 566px;
  }

  .header-content {
    position: static;
    margin: 192px 0;
  }

  .social-media-links {
    top: 351px;
    position: absolute;
    flex-direction: column;
  }

  .project-description {
    font-size: 17px;
  }

  .works {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 24px;
  }

  .works-title-section {
    display: flex;
    align-items: center;
    padding-top: 17px;
    padding-bottom: 42px;
    grid-column: 1 / 4;
  }

  .works-title-section div {
    width: calc(100% - 339px);
  }

  .works-title {
    width: 315px;
    margin-right: 24px;
    height: 52px;
    color: #091e42;
    font-weight: 400;
  }

  .featured-project {
    display: flex;
    grid-column: 1 / 4;
  }

  .f-project-img {
    width: 648px;
    height: 448px;
    margin-right: 24px;
  }

  .f-project-body {
    width: calc(100% - 648px);
  }

  .f-project-body > .project-title {
    font-size: 40px;
    line-height: 52px;
    margin-top: 0;
    color: #091e42;
  }

  .f-project-body > .project-description {
    font-size: 20px;
    line-height: 28px;
    color: #091e42;
  }

  .tag {
    color: #091e42;
  }

  .f-project-body > button {
    margin-top: 24px;
  }

  .project {
    height: 435px;
  }

  .works div:nth-child(n+4) {
    height: 100%;
  }

  .works div:nth-child(3) .project > div {
    display: none;
  }

  .works div:nth-child(3) .project {
    max-height: calc(435px - 58px);
  }

  .project-card > button {
    height: 58px;
  }

  .about-intro > .container > button {
    margin-top: 24px;
  }

  .works div:nth-child(n+4) > button {
    display: none;
  }

  .about {
    background-color: #262626;
    padding-bottom: 116px;
  }

  .about-intro {
    background-size: 672px 352px;
    background-position: center right;
    padding-bottom: 131.2px;
  }

  .about-intro > .container {
    width: calc(566px + 308px);
  }

  .about-title {
    font-size: 72px;
    line-height: 81px;
    height: 78px;
    font-weight: 400;
    margin-top: 10px;
  }

  .about-intro > .container > p {
    font-size: 20px;
    line-height: 32px;
    color: #f4f4f4 !important;
    font-weight: normal;
  }

  .footer-technologies {
    display: flex;
    justify-content: space-between;
  }

  .technologies {
    width: 282px;
  }

  .tech-title {
    text-align: left;
    justify-content: start;
    margin-bottom: 25px;
  }

  .tech {
    text-align: left;
    margin-bottom: 11px;
  }

  .contact-form-section {
    display: flex;
    gap: 24px;
    justify-content: space-between;
    align-items: flex-start;
    padding-top: 130px;
    padding-bottom: 152px;
  }

  .contact-form-title-section {
    width: 455px;
    height: 256px;
  }

  .contact-form-title {
    font-size: 40px;
    line-height: 52px;
    color: #262626;
    text-align: left;
    width: 100%;
  }

  .contact-form {
    height: 330px;
    width: auto;
    margin-top: 0;
    text-align: left;
  }

  .footer-line-section {
    display: none;
  }
}

.w-full {
  width: 100%;
}

.mt-12 {
  margin-top: 12px;
}

.mt-24 {
  margin-top: 24px;
}

.my-24 {
  margin-top: 24px;
  margin-bottom: 24px;
}

.my-10 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.mb-6 {
  margin-bottom: 6px;
}

.decoration-none {
  text-decoration: none;
}

.text-white {
  color: #fff;
}

.text-orange {
  color: #f55800;
}

.text-black {
  color: #1c1a19;
}

.text-white-gray {
  color: #f4f5f7;
}

.font-inter {
  font-family: Inter, sans-serif;
}

.font-crete-round {
  font-family: "Crete Round", serif;
}

.text-bold {
  font-weight: bold;
}

.text-shadow {
  text-shadow: 1px 1px #111;
}

.btn {
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-circle:hover {
  transition: all 0.5s;
  background-color: #f55800;
  border-radius: 50%;
}

